Criado endpoint post users + documentacao swagger
