# endpoints.js
@@ -25,4 +25,26 @@ module.exports = function (app) {
         }
         return res.status(200).send(data)
     })
+
+    app.post('/users', (req, res) => {
+        /* #swagger.tags = ['User']
+           #swagger.description = 'Endpoint para adicionar um usuário.' */
+
+        /* #swagger.parameters['newUser'] = {
+               in: 'body',
+               description: 'Informações do usuário.',
+               required: true,
+               type: 'object',
+               schema: { $ref: "#/definitions/AddUser" }
+        } */
+
+        const newUser = req.body
+
+        if (true) {
+            // #swagger.responses[201] = { description: 'Usuário registrado com sucesso!' }
+            return res.status(201).send(data)
+        }
+        return res.status(500)    // #swagger.responses[500]
+    })
+
 }
